# XplicitCAD

./: .gitignore  CMakeLists.txt  ImplicitSphere.cxx  ImplicitTest.cxx  MarchingCubes.cxx  README.md  Xplicit.cxx  luabridge.h
lua/: luabridge.cpp  luabridge.cxx  luabridge.h
main/: Xplicit.cpp  Xplicit.cxx  implicitMap.cpp  implicitMap.h  implicitMesh.cpp  implicitMesh.h  implicitwidget.cpp  implicitwidget.h  main.cpp  mainwindow.cpp  mainwindow.cxx  mainwindow.h
misc/: debugging.cpp  debugging.h
primitives/: boolean.cpp  boolean.h  boundingBox.cpp  boundingBox.h  primitive.cpp  primitive.h  primitives.cpp  primitives.h  sphere.cpp  sphere.h
ui/: MainWindow.ui
